<resources>
    <string name="app_name">Music Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deleteDialogTitleTxt">Delete</string>
    <string name="deleteDialogeQuestionTxt">Do you want to delete this Song ?</string>
    <string name="DeleteDialogeSongName">Song Name</string>
    <string name="DleleteDialognoTxt">No</string>
    <string name="DleleteDialogeYesTxt">Yes</string>
    <string name="propertiesDialogeTitleTxt">Properties</string>
    <string name="propertiesDialogeNameTxt">Name :</string>
</resources>