<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary">



    <soup.neumorphism.NeumorphCardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:neumorph_shapeType="basin"
        app:neumorph_shadowColorDark="?attr/colorSecondaryVariant"
        app:neumorph_shadowColorLight="?attr/colorSecondary"
        app:neumorph_shadowElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/titleDS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleteDialogTitleTxt"
                android:textSize="20sp"
                android:textColor="@color/text_clr"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/nameTitleDD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleteDialogeQuestionTxt"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/text_clr"
                android:layout_below="@+id/titleDS"/>

            <TextView
                android:id="@+id/songNameDD"
                android:layout_width="match_parent"
                android:layout_marginEnd="32dp"
                android:layout_height="40dp"
                android:text="@string/DeleteDialogeSongName"
                android:textSize="14sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/text_clr"
                android:layout_below="@+id/nameTitleDD"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"/>


            <soup.neumorphism.NeumorphCardView
                android:id="@+id/NoCardDD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/spaceFrameDD"
                app:neumorph_shadowColorDark="?attr/colorSecondaryVariant"
                app:neumorph_shadowColorLight="?attr/colorSecondary"
                app:neumorph_shadowElevation="2dp"
                android:layout_marginBottom="5dp"
                tools:ignore="RelativeOverlap">
                <TextView
                    android:id="@+id/noDD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DleleteDialognoTxt"
                    android:textColor="@color/text_clr"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"/>
            </soup.neumorphism.NeumorphCardView>

            <FrameLayout
                android:id="@+id/spaceFrameDD"
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"/>

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/yesCardDD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/spaceFrameDD"
                app:neumorph_shadowColorDark="?attr/colorSecondaryVariant"
                app:neumorph_shadowColorLight="?attr/colorSecondary"
                app:neumorph_shadowElevation="2dp"
                android:layout_marginBottom="5dp"
                tools:ignore="RelativeOverlap">
                <TextView
                    android:id="@+id/yesDD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DleleteDialogeYesTxt"
                    android:textColor="@color/text_clr"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"/>
            </soup.neumorphism.NeumorphCardView>


        </RelativeLayout>
    </soup.neumorphism.NeumorphCardView>



</RelativeLayout>